// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test cliParser should error on missing project name: missing-project-name-stdout 1`] = `
"  console.error
    jest.js <projectName>
    
    project name
    
    Positionals:
      projectName                                                           [string]
    
    Options:
      -v, --verbose       print additional logs                            [boolean]
      -i, --interactive   interactive mode                                 [boolean]
      -t, --typescript    use typescript                   [boolean] [default: true]
      -h, --husky         install husky pre-commit hook for building launcher
                                                           [boolean] [default: true]
      -s, --skip-install  write dependencies to package.json without installing
                                                                           [boolean]
      -c, --icon          override default launcher icon file               [string]
      -n, --node-version  override node version to bundle                   [string]
          --version       Show version number                              [boolean]
          --help          Show help                                        [boolean]
"
`;

exports[`Test cliParser should print help with flags: --help: help-stdout 1`] = `
"  console.log
    jest.js <projectName>
    
    project name
    
    Positionals:
      projectName  project name                                             [string]
    
    Options:
      -v, --verbose       print additional logs                            [boolean]
      -i, --interactive   interactive mode                                 [boolean]
      -t, --typescript    use typescript                   [boolean] [default: true]
      -h, --husky         install husky pre-commit hook for building launcher
                                                           [boolean] [default: true]
      -s, --skip-install  write dependencies to package.json without installing
                                                                           [boolean]
      -c, --icon          override default launcher icon file               [string]
      -n, --node-version  override node version to bundle                   [string]
          --version       Show version number                              [boolean]
          --help          Show help                                        [boolean]
"
`;
